<resources>
    <string name="app_name">City Service</string>
    <string name="title_activity_admin_dashbard">AdminDashbard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Preetu</string>
    <string name="nav_header_subtitle">preetisingh@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_changepassword">Change Password</string>
    <string name="menu_registration">Registration</string>
    <string name="menu_login">Login</string>
    <string name="menu_addservices">Add Services</string>
    <string name="menu_servicesmanagement">Service Management</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>